--- a/index.html
+++ b/index.html
@@ -4,41 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
+
 <body>
-    <!-- Header code -->
-    <header class="container header-container">
-        <a href="#" class="logo">Anisul Mahmud</a>
+  <!-- header code starts here -->
+  <header>
+    <a href="#" class="logo"><span>Anisul Mahmud</span></a>
+    <ul class="navBar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Experiences</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Publication</a></li>
+        <li><a href="#">Contacts</a></li>
+
+    </ul>
+  </header>
+
+    <!-- Home Section code starts here -->
+
+    <section class="home">
+        <div class="home-container">
+            <span>Software Developer</span>
+            <h1>Anisul Mahmud </h1>
     
-    <!-- Navigation Bar's code -->
-    <nav class="container nav-container">
-        <a href="#" class="nav-home">Home</a>
-        <a href="#">About</a>
-        <a href="#">Experiences</a>
-        <a href="#">Projects</a>
-        <a href="#">Publication</a>
-        <a href="#">Contact</a>
-
-    </nav>
-</header>
-
-<!-- Home Section code starts here -->
-<section class="home">
-    <div class="home-container">
-        <h1> Hi, I'm Anisul Mahmud </h1>
-        <h3>Software Developer</h3>
-        <p>I am a highly motivated software developer with some years of project work experience, pursuing a master’s
-            degree at Tampere University in Finland. Proficient in a range of programming languages and technologies.
-            My accomplishments include publishing two research papers, demonstrating my ability to work effectively
-            under pressure and meet tight deadlines while maintaining attention to detail and commitment to
-            excellence. I am eager to explore the opportunity to immerse myself in a new cultural and professional
-            environment.
-        </p>
-        <div class="button-action">
-            <a href="#" class="btn1">Download CV</a>
-            <a href="#" class="btn2">Contact Me</a>
+            <p>I am a highly motivated software developer with some years of project work experience, pursuing a master’s
+                degree at Tampere University in Finland. 
+            </p>
+            <div class="button-action">
+                <a href="#" class="btn">Download CV</a>
+                <a href="#" class="btn">Contact Me</a>
+            </div>
         </div>
-    </div>
+        <div class="home-img">
+            <img src="./images/pro1.png" alt="">
+
+    </section>
+
+    <!-- social media links code -->
+    <div class="home-link">
+        <p>Get Connected: </p>
+        <a href="https://www.linkedin.com/in/anisul-mahmud-3b886a1bb/" class="link">
+            <img src="./images/link.png" alt="linkedin">
+        </a>
+
+        <a href="https://github.com/AnisulMahmud" class="link">
+            <img src="./images/git.png" alt="gitHub">
+        </a>
+
+        <a href="https://www.researchgate.net/profile/Md-Anisul-Mahmud" class="link">
+            <img src="./images/research.png" alt="researchgate">
+        </a>
+
+     </div>
+
+
 </body>
 </html>
