--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- header code starts here -->
   <header>
-    <a href="#" class="logo"><span>Anisul Mahmud</span></a>
+    <a href="#" class="logo"><span>Anis.</span></a>
     <ul class="navBar">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
